# WorkdayDebrief

./: AGENTS.md  README.md  package-lock.json  package.json
.codex/: verify.commands
.github/workflows/: git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  quality-gates.yml
docs/: PORTFOLIO-DISPOSITION.md
src-tauri/: Cargo.toml
