[package]
name = "workday-debrief"
version = "0.1.0"
description = "WorkdayDebrief - Auto-generate end-of-day work summaries"
authors = ["WorkdayDebrief"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workday_debrief_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = "0.3"
lettre = "0.11"
tokio-cron-scheduler = "0.14"
oauth2 = "4.4"
base64 = "0.22"
urlencoding = "2.1"
age = "0.10"
rand = "0.9"
hostname = "0.4"
